FIT: Added Screener_handler to filter stocks from screener.in. Also added risk analyzer agent using credit report downloaded/scrapped from sreener.in and added strategy agent that takes latest quarterly PPT and prepares strategy view to the langraph graph in app.py. Updated synthesis app to include the matter from risk and strategy agents also into the report summary. Updated quantitative analysis agent to also use the matter from risk and strategy agent as anchor to perform scuttlebutt analysis.

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ openpyxl
 # PDF generation and text extraction
 reportlab
 PyMuPDF
+pypdf
 
 matplotlib
 tabulate
@@ -34,3 +35,5 @@ colorama
 lxml
 
 requests
+beautifulSoup4
+
